--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,27 +10,47 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/login.css"/>
     <!-- hCaptcha -->
     <script async defer src="https://hcaptcha.com/1/api.js"></script>
     <title>Connexion</title>
+
 </head>
 <body>
+<header>
+    <img class="logo" src="images/logo.png">
+</header>
 <div th:insert="fragments/navbar.html :: navbar"></div>
-<div>
-    <h1>Connexion</h1>
-    <p th:text="${error}"></p>
-    <form action="/loginconfirm" id="loginConfirm" method="post">
-        <label for="associationName">Association</label>
-        <input id="associationName" name="associationName" placeholder="Entrez le nom de l'association" value="Test" type="text">
-        <label for="email">Email</label>
-        <input id="email" name="email" placeholder="Entrez votre adresse email" value="simonweb98@gmail.com" type="email">
-        <label for="password">Mot de passe</label>
-        <input id="password" name="password" placeholder="Entrez votre mot de passe" value="abcd" type="password">
-        <a href="/signup">Pas encore inscrit ? Inscrivez-vous !</a>
-        <a href="/passwordforgotten">Mot de passe oublié ?</a>
-        <input id="loginButton" type="submit" value="Se connecter">
-    </form>
+<main>
+    <div class="container">
+        <div class="text">Connectez-vous! </div><hr/>
+         <p th:text="${error}"></p>
+        <form action="/loginconfirm" id="loginConfirm" method="post">
+            <div class="data">
+                <label for="associationName">Association</label>
+                <input id="associationName" name="associationName" placeholder="Entrez le nom de l'association" type="text">
+            </div>
+            <div class="data">
+                <label for="email">Email</label>
+                <input id="email" name="email" placeholder="Entrez votre adresse email"  type="email">
+            </div>
+            <div class="data">
+                <label for="password">Mot de passe</label>
+                <input id="password" name="password" placeholder="Entrez votre mot de passe" type="password">
+            </div>
+            <div>
+                <a href="/passwordforgotten">Mot de passe oublié ?</a>
+            </div><br/>
+            <div class="connecter">
+                <input id="loginButton" type="submit" value="Se connecter">
+            </div>
+            <div>
+                <a href="/signup">Pas encore inscrit ? Inscrivez vous !</a>
+            </div>
+        </form>
+    </div>
 </div>
+</main>
 <script>
     async function submitForm() {
         const signUpForm = document.querySelector('form');
