--- a/src/main/resources/templates/passwordforgotten.html
+++ b/src/main/resources/templates/passwordforgotten.html
@@ -10,20 +10,32 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/passwordforgotten.css"/>
     <title>Mot de passe oublié</title>
+
 </head>
 <body>
-<div th:insert="fragments/navbar.html :: navbar"></div>
-<div>
-    <h1>Mot de passe oublié</h1>
+<header>
+    <img class="logo" src="images/logo.png">
+</header>
+<main>
+<div class="center">
     <p th:text="${success}"></p>
     <p th:text="${error}"></p>
-    <form action="/passwordforgotten" id="passwordForgotten" method="post">
-        <label for="email">Email</label>
-        <input id="email" name="email" placeholder="Entrez votre adresse email" type="email">
+    <form action="/passwordforgotten" method="post">
+        <div class="container">
+        <div class="title">Entrez votre adresse email!</div> <hr/>
+        <div class="data">
+            <label for="email">Email</label>
+            <input id="email" name="email" placeholder="Entrez votre adresse email" type="email">
+        </div>
         <br/>
-        <input type="submit" value="Réinitialiser le mot de passe">
+        <div class="mdp">
+            <input type="submit" value="Réinitialiser le mot de passe">
+        </div>
+        </div>
     </form>
 </div>
+</main>
 </body>
 </html>
