--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,13 +10,34 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/signup.css">
     <title>Inscription</title>
+
 </head>
 <body>
+<header>
+    <img class="logo" src="images/logo.png"/>
+</header>
 <div th:insert="fragments/navbar.html :: navbar"></div>
-<div>
-    <a href="signupmember">S'inscire en tant que membre</a>
-    <a href="signupsuperadmin">S'inscire en tant que créateur</a>
+
+<main>
+    <div class="head">
+        <H3>inscrivez-vous en tant que:</H3>
+    </div>
+<div class="cont">
+    <div class="container" >
+        <div class="link-box">
+            <img class="image1" src="images/administrator.png">
+            <a class="link" href="/signupsuperadmin"> Admin</a>
+        </div>
+    </div>
+    <div class="container">
+        <div class="link-box">
+            <img class="image" src="images/group.png">
+            <a class="link" href="/signupmember">Membre</a>
+        </div>
+    </div>
 </div>
+</main>
 </body>
 </html>
