--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,5 +14,6 @@
 </head>
 <body>
 <div th:insert="fragments/navbar.html :: navbar"></div>
+<div th:insert="fragments/navbar.html :: sidebar"></div>
 <h1>Accueil</h1>
 </body>
