--- a/src/main/resources/templates/passwordforgotten.html
+++ b/src/main/resources/templates/passwordforgotten.html
@@ -12,30 +12,30 @@
     />
     <link rel="stylesheet" href="css/passwordforgotten.css"/>
     <title>Mot de passe oublié</title>
-
 </head>
 <body>
 <header>
     <img class="logo" src="images/logo.png">
 </header>
 <main>
-<div class="center">
-    <p th:text="${success}"></p>
-    <p th:text="${error}"></p>
-    <form action="/passwordforgotten" method="post">
-        <div class="container">
-        <div class="title">Entrez votre adresse email!</div> <hr/>
-        <div class="data">
-            <label for="email">Email</label>
-            <input id="email" name="email" placeholder="Entrez votre adresse email" type="email">
-        </div>
-        <br/>
-        <div class="mdp">
-            <input type="submit" value="Réinitialiser le mot de passe">
-        </div>
-        </div>
-    </form>
-</div>
+    <div class="center">
+        <p th:text="${success}"></p>
+        <p th:text="${error}"></p>
+        <form action="/passwordforgotten" method="post">
+            <div class="container">
+                <div class="title">Entrez votre adresse email!</div>
+                <hr/>
+                <div class="data">
+                    <label for="email">Email</label>
+                    <input id="email" name="email" placeholder="Entrez votre adresse email" type="email">
+                </div>
+                <br/>
+                <div class="mdp">
+                    <input type="submit" value="Réinitialiser le mot de passe">
+                </div>
+            </div>
+        </form>
+    </div>
 </main>
 </body>
 </html>
