--- a/src/main/resources/templates/billingmember.html
+++ b/src/main/resources/templates/billingmember.html
@@ -19,14 +19,13 @@
     <img class="logo" src="images/logo.png">
 </header>
 <main>
-    <div class = formulaire>
+    <div class=formulaire>
         <div class="titre"><strong>Ajouter un paiement</strong></div>
         <p th:text="${error}"></p>
-        <form action="/billingconfirm" id="billingConfirm" method="post">
-
+        <form action="/billingmemberconfirm" id="billingMemberConfirm" method="post">
             <div class="user-details">
                 <div class="input-box">
-                    <label class="details"  for="creditCard">Numéro de carte bancaire</label>
+                    <label class="details" for="creditCard">Numéro de carte bancaire</label>
                     <input id="creditCard" name="creditCard"
                            pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|(?:5[1-5][0-9]{2}|222[1-9]|22[3-9][0-9]|2[3-6][0-9]{2}|27[01][0-9]|2720)[0-9]{12})$"
                            placeholder="Entrez votre numéro de carte bancaire"
@@ -40,7 +39,8 @@
                 </div>
                 <div class="input-box">
                     <label class="details" for="cryptogram">Cryptogramme</label>
-                    <input id="cryptogram" name="cryptogram" pattern="[0-9]{3}" placeholder="Entrez votre cryptogramme de carte"
+                    <input id="cryptogram" name="cryptogram" pattern="[0-9]{3}"
+                           placeholder="Entrez votre cryptogramme de carte"
                            required type="text">
                 </div>
                 <div class="input-box">
@@ -48,8 +48,6 @@
                     <input id="name" name="name" placeholder="Entrez le nom présent sur la carte bancaire"
                            required type="text">
                 </div>
-
-
             </div>
             <div class="ab-details">
                 <input type="radio" name="ab" id="price-1">
@@ -61,44 +59,31 @@
                         <span class="price one"></span>
                         <span class="ab">Abonnement 1 mois</span>
                         <p th:text="${session.subscription.association.price1Month}"></p>
-
                     </label>
-
                     <label for="price-3">
                         <span class="price two"></span>
                         <span class="ab">Abonnement 3 mois</span>
                         <p th:text="${session.subscription.association.price3Months}"></p>
-
                     </label>
-
-                    <label for="price-12" >
+                    <label for="price-12">
                         <span class="price three"></span>
                         <span class="ab"> Abonnement 12 mois</span>
                         <p th:text="${session.subscription.association.price12Months}"></p>
-
                     </label>
                 </div>
-
             </div>
-
             <div class="button">
                 <div class="input-button">
                     <input type="submit" value="Procéder au paiement">
                 </div>
-                <div class="input-button">
-                    <form action="/billingskip" method="post">
-                        <input th:disabled="${session.subscription.delayed}" type="submit" value="Effectuer le paiement plus tard">
-                    </form>
-                </div>
             </div>
-
-
-
         </form>
+        <div class="input-button">
+            <form action="/billingskip" method="post">
+                <input th:disabled="${session.subscription.delayed}" type="submit" value="Effectuer le paiement plus tard">
+            </form>
+        </div>
     </div>
-
-
 </main>
-
 </body>
 </html>
