--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -27,15 +27,50 @@
         <a href="/profile"
            th:classappend="${#httpServletRequest.requestURI == '/profile'}"
            th:if="${session.subscription != null}">Profile</a>
-        <a href="/billing"
-           th:classappend="${#httpServletRequest.requestURI == '/billing'}"
-           th:if="${session.subscription != null && session.subscription.stop == 0}">Paiement</a>
+        <a href="/billingmember"
+           th:classappend="${#httpServletRequest.requestURI == '/billingmember'}"
+           th:if="${session.subscription != null && session.subscription.status.superAdmin == False && session.subscription.stop == 0}">Paiement</a>
+        <a href="/billingsuperadmin"
+           th:classappend="${#httpServletRequest.requestURI == '/billingsuperadmin'}"
+           th:if="${session.subscription != null && session.subscription.status.superAdmin == True && session.subscription.stop == 0}">Paiement</a>
         <a href="/managemembers"
            th:classappend="${#httpServletRequest.requestURI == '/managemembers'}"
            th:if="${session.subscription != null && session.subscription.status.admin == True}">Gestion des membres</a>
         <a href="/logout"
            th:classappend="${#httpServletRequest.requestURI == '/logout'}"
            th:if="${session.subscription != null}">Déconnexion</a>
+    </nav>
+</div>
+
+<div th:fragment="sidebar">
+    <nav id="sidebar">
+        <div class="sidebar">
+            <div class="siderbar-logo">
+                <img class="logo" src="images/logo.png">
+            </div>
+            <div class="sidebar-menu">
+                <ul>
+                    <li>
+                        <a href="" class="act"><span class="tab-bord"></span><span> Tableau de bord</span></a>
+                    </li>
+                    <li>
+                        <a href="managemembers" class="active"><span class="G-member"></span><span>Gestion des membres</span></a>
+                    </li>
+                    <li>
+                        <a href="" class="act"><span class="bill"></span><span>Billetterie</span></a>
+                    </li>
+                    <li>
+                        <a href="" class="act"><span class="coll"></span><span>Collectes</span></a>
+                    </li>
+                    <li>
+                        <a href="managepayments" class="act"><span class="pai"></span><span>Paiement</span></a>
+                    </li>
+                    <li>
+                        <a href="" class="act"><span class="comm"></span><span>Communication</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </div>
 </body>
