--- a/src/main/resources/templates/managemembers.html
+++ b/src/main/resources/templates/managemembers.html
@@ -15,34 +15,7 @@
 </head>
 <body>
 <div th:insert="fragments/navbar.html :: navbar"></div>
-<div class="sidebar">
-    <div class="siderbar-logo">
-        <img  class="logo" src="images/logo.png">
-    </div>
-    <div class="sidebar-menu">
-        <ul>
-            <li>
-                <a href="" class="act" ><span class="tab-bord"></span><span> Tableau de bord</span></a>
-            </li>
-            <li>
-                <a href="managemembers.html" class="active"><span class="G-member"></span><span> Gestion des membres</span></a>
-            </li>
-            <li>
-                <a href="" class="act"><span class="bill"></span><span> Billetterie</span></a>
-            </li>
-            <li>
-                <a href=""class="act"><span class="coll"></span><span> Collectes</span></a>
-            </li>
-            <li>
-                <a href="managepayments.html"class="act"><span class="pai"></span><span> Paiement</span></a>
-            </li>
-            <li>
-                <a href=""class="act"><span class="comm"></span><span> Communication </span></a>
-            </li>
-        </ul>
-    </div>
-</div>
-
+<div th:insert="fragments/navbar.html :: sidebar"></div>
 
 <div class="main-content">
     <header>
@@ -50,68 +23,51 @@
         <p th:text="${success}"></p>
         <p th:text="${error}"></p>
         <div class="deco">
-
             <a href="/logout"
                th:classappend="${#httpServletRequest.requestURI == '/logout'}"
-               th:if="${session.subscription != null}">Déconnexion</a>
+               th:if="${session.subscription != null}">Déconnexion
+            </a>
         </div>
     </header>
-
-
     <main>
-
         <div class="formulaire">
             <div class="titre"><strong>Ajouter un adhérent</strong></div>
             <p th:text="${error}"></p>
             <form action="/addmembersconfirm" id="addMemberConfirm" method="post">
                 <div class="user-details">
                     <div class="input-box">
-                        <span class="details" for="firstName">Prénom </span>
+                        <span class="details" for="firstName">Prénom</span>
                         <input id="firstName" name="firstName" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
                                placeholder="Entrez le prénom" required type="text">
                     </div>
-
-
                     <div class="input-box">
-                        <span class="details" for="lastName">Nom </span>
+                        <span class="details" for="lastName">Nom</span>
                         <input id="lastName" name="lastName" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
                                placeholder="Entrez le nom" required type="text">
-
                     </div>
-
-
                     <div class="input-box">
-                        <span class="details" for="birthDate"> Date de naissance</span>
+                        <span class="details" for="birthDate">Date de naissance</span>
                         <input type="date" id="birthDate" name="birthDate" placeholder="jj/mm/aaaa" required>
                     </div>
-
-
                     <div class="input-box">
                         <span class="details" for="email">Email </span>
                         <input id="email" name="email" placeholder="Entrez l'email" required type="email">
                     </div>
-
-
                     <div class="input-box">
                         <span class="details" for="phoneNumber"> Numéro de téléphone </span>
                         <input id="phoneNumber" name="phoneNumber" pattern="^(\+33|0033|0)([0-7])[0-9]{8}$"
                                placeholder="Entrez le numéro de téléphone" required type="tel">
                     </div>
-
                     <div class="input-box">
                         <span class="details" for="address">Adresse </span>
                         <input id="address" name="address" pattern='^[^<>%$§!?°"£\+€`*:;,()[]]*=$'
                                placeholder="Entrez l'adresse" required type="text">
                     </div>
-
-
                     <div class="input-box">
                         <span class="details" for="city">Ville </span>
                         <input id="city" name="city" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
                                placeholder="Entrez la ville" required type="text">
                     </div>
-
-
                     <div class="input-box">
                         <span class="details" for="postalCode">Code postal</span>
                         <input id="postalCode" name="postalCode" pattern="[0-9]{5}"
@@ -125,20 +81,15 @@
                         <div class="category">
                             <label for="dot-1">
                                 <span class="dot one"></span>
-                                <span class="gender"> Homme</span>
-
+                                <span class="gender">Homme</span>
                             </label>
-
                             <label for="dot-2">
                                 <span class="dot two"></span>
-                                <span class="gender"> Femme</span>
-
+                                <span class="gender">Femme</span>
                             </label>
-
-                            <label for="dot-3" >
+                            <label for="dot-3">
                                 <span class="dot three"></span>
-                                <span class="gender"> Autre</span>
-
+                                <span class="gender">Autre</span>
                             </label>
                         </div>
                     </div>
@@ -155,34 +106,24 @@
                                 <span class="dot five"></span>
                                 <span class="level"> Membre </span>
                             </label>
-
                         </div>
-
-
                     </div>
-                    <input  id="addMemberButton" name='addMemberButton' type="submit" value="Ajouter">
+                    <input id="addMemberButton" name='addMemberButton' type="submit" value="Ajouter">
                 </div>
-
                 <div class="butt">
-
-                    <form action="/addmemberfromfileconfirm" id="addMemberFromFileConfirm" method="post" enctype="multipart/form-data">
+                    <form action="/addmemberfromfileconfirm" id="addMemberFromFileConfirm" method="post"
+                          enctype="multipart/form-data">
                         <input type="file" id="file" name="file"
                                accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
-                        <input id="addMemberFromFileButton" name='addMemberFromFileButton' type='submit' value="Ajouter"/>
+                        <input id="addMemberFromFileButton" name='addMemberFromFileButton' type='submit'
+                               value="Ajouter"/>
                     </form>
                     <form action="/receivemembersfromfile" method="get">
                         <button type="submit">Exporter</button>
                     </form>
-
                 </div>
             </form>
-
-
-
-
         </div>
-
-
         <div class="tableau">
             <table>
                 <tr>
@@ -198,7 +139,7 @@
                 </tr>
                 <tr id="members" th:each="Member : ${members}">
                     <td th:utext="${Member.firstName}"></td>
-                    <td th:utext="${#strings.capitalize(Member.lastName)}"> </td>
+                    <td th:utext="${#strings.capitalize(Member.lastName)}"></td>
                     <td th:utext="${#strings.capitalize(Member.sex)}"></td>
                     <td th:utext="${#strings.capitalize(Member.birthDate)}"></td>
                     <td th:utext="${#strings.capitalize(Member.address)}"></td>
@@ -212,9 +153,5 @@
         </div>
     </main>
 </div>
-
-
-
-
 </body>
 </html>
