--- a/src/main/resources/templates/managepayments.html
+++ b/src/main/resources/templates/managepayments.html
@@ -15,53 +15,20 @@
 </head>
 <body>
 <div th:insert="fragments/navbar.html :: navbar"></div>
-<div class="sidebar">
-    <div class="siderbar-logo">
-        <img  class="logo" src="images/logo.png" >
-    </div>
-    <div class="sidebar-menu">
-        <ul>
-            <li>
-                <a href="/index" class="act" ><span class="tab-bord"></span><span> Tableau de bord</span></a>
-            </li>
-            <li>
-                <a href="/managemembers" class="act"><span class="G-member"></span><span> Gestion des membres</span></a>
-            </li>
-            <li>
-                <a href="" class="act"><span class="bill"></span><span> Billetterie</span></a>
-            </li>
-            <li>
-                <a href=""class="act"><span class="coll"></span><span> Collectes</span></a>
-            </li>
-            <li>
-                <a href="/managepayments"class="active"><span class="pai"></span><span> Paiement</span></a>
-            </li>
-            <li>
-                <a href=""class="act"><span class="comm"></span><span> Communication </span></a>
-            </li>
-        </ul>
-    </div>
-</div>
-
+<div th:insert="fragments/navbar.html :: sidebar"></div>
 
 <div class="main-content">
     <header>
         <h1>Paiements</h1>
         <p th:text="${success}"></p>
         <p th:text="${error}"></p>
-
         <div class="Deco">
-
             <a href="/logout"
                th:classappend="${#httpServletRequest.requestURI == '/logout'}"
                th:if="${session.subscription != null}">Déconnexion</a>
-
         </div>
     </header>
-
-
     <main>
-
         <div class="tableau">
             <table>
                 <tr>
@@ -69,53 +36,41 @@
                     <th>Nom</th>
                     <th>Type d'abonnement</th>
                     <th>Montant</th>
-
                 </tr>
-
                 </tr>
                 <tr>
-                    <td>Li </td>
-                    <td>AIT </td>
+                    <td>Li</td>
+                    <td>AIT</td>
                     <td>1 mois</td>
-                    <td> 200 € </td>
-
-
+                    <td> 200 €</td>
                 </tr>
                 <tr>
-                    <td>Mi </td>
-                    <td>mopIT </td>
+                    <td>Mi</td>
+                    <td>mopIT</td>
                     <td> 12 mois</td>
-                    <td>2400 € </td>
-
-
+                    <td>2400 €</td>
                 </tr>
                 <tr>
-                    <td>Mi </td>
-                    <td>mopIT </td>
+                    <td>Mi</td>
+                    <td>mopIT</td>
                     <td> 12 mois</td>
-                    <td>2400 € </td>
-
-
+                    <td>2400 €</td>
                 </tr>
                 <tr>
-                    <td>Mi </td>
-                    <td>mopIT </td>
+                    <td>Mi</td>
+                    <td>mopIT</td>
                     <td> 12 mois</td>
-                    <td>2400 € </td>
-
-
+                    <td>2400 €</td>
                 </tr>
                 <tr>
-                    <td>Mi </td>
-                    <td>mopIT </td>
+                    <td>Mi</td>
+                    <td>mopIT</td>
                     <td> 12 mois</td>
-                    <td>2400 € </td>
+                    <td>2400 €</td>
                 </tr>
             </table>
         </div>
     </main>
-
-
 </div>
 </body>
 </html>
