--- a/src/main/resources/templates/signupmember.html
+++ b/src/main/resources/templates/signupmember.html
@@ -14,7 +14,6 @@
     <!-- hCaptcha -->
     <script async defer src="https://hcaptcha.com/1/api.js"></script>
     <title>Inscription</title>
-
 </head>
 <body>
 <header>
@@ -38,9 +37,9 @@
                            placeholder="Entrez votre nom" required type="text">
                 </div>
                 <div class="gender-details">
-                    <input type="radio" name="gender" id="dot-1">
-                    <input type="radio" name="gender" id="dot-2">
-                    <input type="radio" name="gender" id="dot-3">
+                    <input type="radio" name="gender" value="homme" id="dot-1">
+                    <input type="radio" name="gender" value="femme" id="dot-2">
+                    <input type="radio" name="gender" value="autre" id="dot-3">
                     <span class="gender-title">Sexe</span>
                     <div class="category">
                         <label for="dot-1">
@@ -63,8 +62,8 @@
                     <input id="birthDate" name="birthDate" required type="date">
                 </div>
                 <div class="input-box">
-                    <label class="details" for="association">Association</label>
-                    <input id="association" name="association" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
+                    <label class="details" for="associationName">Association</label>
+                    <input id="associationName" name="associationName" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
                            placeholder="Entrez le nom de l'association" required type="text">
                 </div>
                 <div class="input-box">
