--- a/src/main/resources/templates/billingsuperadmin.html
+++ b/src/main/resources/templates/billingsuperadmin.html
@@ -17,7 +17,7 @@
 <div>
     <h1>Paiement</h1>
     <p th:text="${error}"></p>
-    <form action="/billingconfirm" id="billingConfirm" method="post">
+    <form action="/billingsuperadminconfirm" id="billingSuperAdminConfirm" method="post">
         <div>
             <p>Prix de l'abonnement :</p>
             <p th:text="${price}"></p>
