--- a/src/main/resources/templates/billingmember.html
+++ b/src/main/resources/templates/billingmember.html
@@ -17,7 +17,7 @@
 <div>
     <h1>Paiement</h1>
     <p th:text="${error}"></p>
-    <form action="/billingconfirm" id="billingConfirm" method="post">
+    <form action="/billingmemberconfirm" id="billingMemberConfirm" method="post">
         <div id="price1">
             <p>Abonnement 1 mois</p>
             <p th:text="${session.subscription.association.price1Month}"></p>
