--- a/src/main/resources/templates/signupmember.html
+++ b/src/main/resources/templates/signupmember.html
@@ -21,8 +21,8 @@
     <p th:text="${error}"></p>
     <form action="/signupmemberconfirm" id="signupMemberConfirm" method="post">
         <div>
-            <label for="association">Association</label>
-            <input id="association" name="association" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
+            <label for="associationName">Association</label>
+            <input id="associationName" name="associationName" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
                    placeholder="Entrez le nom de l'association" required type="text">
         </div>
         <div>
