--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -12,23 +12,23 @@
     />
     <!-- hCaptcha -->
     <script async defer src="https://hcaptcha.com/1/api.js"></script>
-    <title>Connexion</title>
+    <title>Rejoindre</title>
 </head>
 <body>
 <div th:insert="fragments/navbar.html :: navbar"></div>
 <div>
-    <h1>Connexion</h1>
+    <h1>Rejoindre</h1>
     <p th:text="${error}"></p>
-    <form action="/loginconfirm" id="loginConfirm" method="post">
+    <form action="/joinconfirm" id="joinConfirm" method="post">
         <label for="associationName">Association</label>
-        <input id="associationName" name="associationName" placeholder="Entrez le nom de l'association" value="test" type="text">
+        <input id="associationName" name="associationName" placeholder="Entrez le nom de l'association" value="Test" type="text">
         <label for="email">Email</label>
         <input id="email" name="email" placeholder="Entrez votre adresse email" value="simonweb98@gmail.com" type="email">
         <label for="password">Mot de passe</label>
         <input id="password" name="password" placeholder="Entrez votre mot de passe" value="abcd" type="password">
         <a href="/signup">Pas encore inscrit ? Inscrivez-vous !</a>
         <a href="/passwordforgotten">Mot de passe oublié ?</a>
-        <input id="loginButton" type="submit" value="Se connecter">
+        <input id="joinButton" type="submit" value="Rejoindre">
     </form>
 </div>
 <script>
